[project]
name = "UAP-Machine-Learning"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dhimz1157", email = "thekentong@gmail.com"},
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "streamlit>=1.41.1",
    "tensorflow>=2.18.0",
    "streamlit-webrtc>=0.47.9",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
